Initialization of the New Project Repo, soon will be 4.3.4

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-= ArkCORE 4.0.6a -- General information =
+= ArkCORE Rebuild 4.3.4 -- General information =
 
 Copyright (C) ArkCORE  	  (http://www.arkania.net)
 Copyright (C) SkyFireEMU  (http://www.projectskyfire.org)
